# best_reviewer_cpp

./: .gitignore  README.md
docs/: cpp_cmake_template.md  cpp_naming_convention_google_vs_microsoft.md  cpp_tdd_routine.md  cpp_tdd_setup.md  java_naming_convention_google_vs_oracle.md  python_naming_convention_pep8_vs_google.md  python_tdd_arithmetic_pytest.md  workbook1_setup.md
week_1/00_language_test_2/: CMakeLists.txt  CMakePresets.json
week_1/00_language_test_2/src/: main.cpp  test.cpp  test.h
week_1/00_language_test_3/: CMakeLists.txt  CMakeLists_1.txt
week_1/00_language_test_3/src/: minus.cpp  minus.h  plus.cpp  plus.h
week_1/00_language_test_3/tests/: TestMinus.cpp  TestPlus.cpp
